att barra home/page

--- a/css/main.css
+++ b/css/main.css
@@ -10,8 +10,8 @@ body {
 }
 
 header {
-    background-color:#333;
-    padding: 20px 0;
+    background-color: #333;
+    padding: 10px 0;
     text-align: center;
     color: white;
 }
@@ -25,7 +25,7 @@ main {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 40px 20px;
+    padding: 25px 20px;
 }
 
 .search-container {
@@ -61,7 +61,7 @@ button {
 }
 
 button:hover {
-    background-color: #333;
+    background-color: #555;
 }
 
 .image-grid {
@@ -96,4 +96,48 @@ button:hover {
 .image-grid p {
     font-size: 16px;
     margin: 5px 0 0;
+}
+
+/* Estilos para o menu responsivo */
+.menu {
+    background-color: #343a40;
+    width: 25%;
+    border-radius: 15px;
+    margin-bottom: 15px;
+}
+
+.menu ul {
+    list-style-type: none;
+    display: flex;
+    justify-content: center; /* Centraliza os itens horizontalmente */
+    padding: 0;
+    margin: 0;
+}
+
+.menu li {
+    margin: 0 10px;
+}
+
+.menu a {
+    color: white;
+    text-decoration: none;
+    padding: 15px 20px;
+    display: block;
+    transition: background-color 0.3s;
+}
+
+.menu a:hover {
+    background-color: #495057;
+}
+
+/* Estilos responsivos */
+@media (max-width: 768px) {
+    .menu ul {
+        flex-direction: column; /* Faz os itens ficarem em coluna em telas menores */
+    }
+
+    .menu li {
+        text-align: center;
+        margin: 10px 0;
+    }
 }
