--- a/views/rdr2.html
+++ b/views/rdr2.html
@@ -8,9 +8,15 @@
 </head>
 <body>
     <header>
-        <p><b>Jogos piratas ponto com</b></p>
+        <p><b>Jogos educativos ponto com</b></p>
     </header>
     <main>
+        <div class="menu">
+            <ul>
+                <li><a href="../index.html">Home</a></li>
+                <li><a href="#">Page</a></li>
+            </ul>
+        </div>
         <div class="content">
             <div class="game-image">
                 <img src="../img/Hpl5MtwQgOVF9vJqlfui6SDB5Jl4oBSq.jpeg" alt="Imagem do Jogo">
@@ -22,7 +28,7 @@
                 <p><strong>Especificações do Download:</strong> 150 GB</p>
                 <p><strong>Versão do arquivo</strong>
                 <p><strong>Versão Download:</strong> Build.1436.28 by EMPRESS+Mr_Goldberg</p>
-                    <button><a href="/seedGame/RedDeadRedemption2.torrent">Click Aqui!!</a></button>
+                    <button><a href="../seedGame/RedDeadRedemption2.torrent">Click Aqui!!</a></button>
                 <p><strong>Resenha:</strong><a href="https://www.adrenaline.com.br/analise/outros/analise-red-dead-redemption-2/">O bom RDR 2 é incrível, não tem como negar. Até quem não gosta do gênero de jogos em mundo aberto ou faroeste vai reconhecer o trabalho técnico impressionante por trás desse jogo. Temos um mapa imenso, com um cenário belíssimo, tanto no aspecto de direção de arte como na qualidade gráfica, recheado de atividades das mais variadas</a>
                                 </div>
         </div>
