--- a/css/main.css
+++ b/css/main.css
@@ -3,10 +3,10 @@
 
 body {
     font-family: 'Roboto', sans-serif;
-    background-color: #f0f0f5;
+    background-color: #171515;
     margin: 0;
     padding: 0;
-    color: #333;
+    color: white;
 }
 
 header {
