--- a/css/main.css
+++ b/css/main.css
@@ -101,7 +101,7 @@ button:hover {
 /* Estilos para o menu responsivo */
 .menu {
     background-color: #333;
-    width: 25%;
+    width: 30%;
     border-radius: 15px;
     margin-bottom: 15px;
 }
@@ -119,11 +119,12 @@ button:hover {
 }
 
 .menu a {
+    font-size: 14px;
     color: white;
     text-decoration: none;
     padding: 15px 20px;
     display: block;
-    transition: background-color 0.3s;
+    font-family: 'Roboto', sans-serif;
 }
 
 .menu a:hover {
