--- a/Categorias/cssCategorias/cssCategoria.css
+++ b/Categorias/cssCategorias/cssCategoria.css
@@ -72,38 +72,26 @@ button:hover {
     background-color: #555;
 }
 
-.image-grid {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
-    gap: 20px;
+.button-list {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
 }
 
-.image-grid h3 {
-    text-align: center;
-    margin: 10px 0;
-}
-
-.image-grid a {
-    text-decoration: none;
-    color: inherit;
-}
-
-.image-grid img {
-    width: 100%;
-    height: auto;
-    border-radius: 10px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    transition: transform 0.2s, box-shadow 0.2s;
-}
-
-.image-grid img:hover {
-    transform: scale(1.05);
-    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
-}
-
-.image-grid p {
+.button {
+    display: inline-block;
+    padding: 10px 20px;
     font-size: 16px;
-    margin: 5px 0 0;
+    color: white;
+    background-color: #007bff;
+    text-align: center;
+    text-decoration: none;
+    border-radius: 5px;
+    transition: background-color 0.3s;
+}
+
+.button:hover {
+    background-color: #0056b3;
 }
 
 /* Estilos para o menu responsivo */
